# Firmware_Silabs

./: .gitignore  app.c  build-and-flash.sh  main.c  od_rtt.c  od_rtt.h  opendisplay-bg22.pintool  opendisplay-bg22.slcp  opendisplay-bg22.slps  opendisplay_ble.c  opendisplay_ble.h  opendisplay_config_parser.c  opendisplay_config_parser.h  opendisplay_config_storage.c  opendisplay_config_storage.h  opendisplay_constants.h  opendisplay_display.cpp  opendisplay_display.h  opendisplay_display_color.c  opendisplay_display_color.h  opendisplay_epd_map.c  opendisplay_epd_map.h  opendisplay_led.c  opendisplay_led.h  opendisplay_pipe.c  opendisplay_pipe.h  opendisplay_protocol.h  opendisplay_structs.h  readme.md
.github/workflows/: ci.yml  release.yml
autogen/: gatt_db.c  gatt_db.h  linkerfile.icf  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c
autogen/.slc_state/: .crc_config.crc
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
bootloader-artifact/: README.md  opendisplay-bootloader.s37
cmake_gcc/: CMakeLists.txt  CMakePresets.json  opendisplay-bg22.cmake  readme.md
config/: app_properties_config.h  nvm3_default_config.h  pin_config.h  sl_application_type.h  sl_bt_dynamic_gattdb_config.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_power_manager_config.h  sl_rail_util_pa_config.h
config/btconf/: gatt_configuration.btconf  slc_args.json
qr/: qrcode.c  qrcode.h
